--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .vscode
 /.vscode
 .vscode/*
+swan-db.sqlite
+test.sqlite
 # dependencies
 /node_modules
 
@@ -22,6 +24,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
-package.json
 package-lock.json
 /server/node_modules
