--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "dataurl": "^0.1.0",
+    "dexie": "^2.0.4",
     "electron-is-dev": "^0.3.0",
     "electron-rebuild": "^1.8.2",
     "musicmetadata": "^2.0.5",
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
+    "react-notify-toast": "^0.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
@@ -19,7 +21,8 @@
     "redux": "^4.0.0",
     "sequelize": "^4.38.0",
     "soundmanager2": "^2.97.20150601-a",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.0.2",
+    "why-did-you-update": "^0.1.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
@@ -34,7 +37,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "cd server && npm start",
     "electron": "cd public && electromon electron.js",
     "electron-dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "build x64.main=build/electron.js",
