save songs properly - store artworks - global shortcutKeys

--- a/package.json
+++ b/package.json
@@ -1,35 +1,6 @@
 {
   "name": "swarn-player",
   "version": "0.1.0",
-  "dependencies": {
-    "axios": "^0.9.1",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
-    "dataurl": "^0.1.0",
-    "dexie": "^2.0.4",
-    "electron-is-dev": "^0.3.0",
-    "electron-rebuild": "^1.8.2",
-    "musicmetadata": "^2.0.5",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.7",
-    "react-notify-toast": "^0.5.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.0.17",
-    "react-sound": "^0.4.0",
-    "react-toastify": "^4.1.0",
-    "redux": "^4.0.0",
-    "sequelize": "^4.38.0",
-    "soundmanager2": "^2.97.20150601-a",
-    "sqlite3": "^4.0.2",
-    "why-did-you-update": "^0.1.1"
-  },
-  "devDependencies": {
-    "concurrently": "^3.5.1",
-    "electron": "*",
-    "electron-builder": "^20.5.1",
-    "wait-on": "^2.1.0"
-  },
   "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts start",
@@ -37,10 +8,42 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron": "cd public && electromon electron.js",
-    "electron-dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron": "electron .",
+    "electron-dev": "concurrently \"npm start\" \"wait-on http://localhost:3001 && electron .\"",
     "electron-pack": "build x64.main=build/electron.js",
     "ship": "build --config=electron-builder.yml -p always",
     "rebuild": "electron-rebuild -f -w sqlite3"
+  },
+  "dependencies": {
+    "axios": "^0.9.1",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "dataurl": "^0.1.0",
+    "dexie": "^2.0.4",
+    "electron": "3.0.7",
+    "electron-is-dev": "^0.3.0",
+    "electron-prebuilt": "^1.4.13",
+    "electron-rebuild": "^1.2.8",
+    "electron-reload": "^1.4.0",
+    "electron-reloader": "^0.2.0",
+    "musicmetadata": "^2.0.5",
+    "node-static": "^0.7.11",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-notify-toast": "^0.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.0.17",
+    "react-sound": "^0.4.0",
+    "react-toastify": "^4.1.0",
+    "redux": "^4.0.0",
+    "sequelize": "^4.42.0",
+    "soundmanager2": "^2.97.20150601-a",
+    "sqlite3": "^4.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "electron-builder": "^20.5.1",
+    "wait-on": "^2.1.0"
   }
 }
