--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .vscode
 /.vscode
 .vscode/*
-swan-db.sqlite
+./public/swan-db.sqlite
 test.sqlite
 # dependencies
 /node_modules
@@ -26,3 +26,4 @@ yarn-error.log*
 yarn.lock
 package-lock.json
 /server/node_modules
+public/artworks/*
