--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "swarn-player",
+  "name": "swan-desktop",
   "version": "0.1.0",
-  "main": "public/electron.js",
+  "main": "electron/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
